@@ -7,6 +7,7 @@ ver 0.24 (not yet released)
 * decoder
   - hybrid_dsd: remove
   - opus: implement bitrate calculation
+  - wavpack: require libwavpack version 5
 * player
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 * tags
